--- a/dotenv.example
+++ b/dotenv.example
@@ -58,6 +58,11 @@ ACME_IP6=2001:db8:aaaa:aabf:192:0:0:46
 ACME_NET_4=192.0.0.44/30
 ACME_NET_6=2001:db8:aaaa:aabf::/64
 
+POWERDNS_IP4=192.0.0.50
+POWERDNS_IP6=2001:db8:aaaa:aaca:192:0:0:50
+POWERDNS_NET_4=192.0.0.48/30
+POWERDNS_NET_6=2001:db8:aaaa:aaca::/64
+
 SQUID_IP4=192.0.0.30
 SQUID_IP6=2001:db8:aaaa:aabb:192:0:0:30
 SQUID_NET_4=192.0.0.28/30
