--- a/docker/powerdns/Dockerfile
+++ b/docker/powerdns/Dockerfile
@@ -8,10 +8,10 @@ ADD $TEMPLATE_ROOT /opt/conf/templates
 
 RUN /usr/bin/netcrave-template
 
-RUN apt --option Dpkg::Options::="--force-confold" --no-install-recommends -y install pdns_server
+RUN apt --option Dpkg::Options::="--force-confold" --no-install-recommends -y install pdns-server pdns-backend-pgsql
 
 RUN rm -rf /opt/conf
 
 ARG ADMIN_SOCKET_ADDR
 
-CMD pdns_server --config /etc/pdns.conf
+CMD "/usr/sbin/pdns_server"
