--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,16 @@ description = "Improved functionality for Docker for building advanced container
 authors = ["Paige Thompson <paige@paige.bio>"]
 license = "GPL"
 readme = "README.md"
-packages = [{ include = "netcrave_docker_certificatemgr", from = "src" },{ include = "netcrave_docker_dnsd", from = "src" }, { include = "netcrave_docker_haproxyctl", from = "src" }, { include = "netcrave_docker_icap", from = "src" }, { include = "netcrave_docker_ipam", from = "src" }, { include = "netcrave_docker_davfs", from = "src" }, { include = "netcrave_docker_acme", from = "src" }, { include = "netcrave_docker_util", from = "src" }]
-
+packages = [{ include = "netcrave_docker_certificatemgr", from = "src" },
+            { include = "netcrave_docker_dnsd", from = "src" }, 
+            { include = "netcrave_docker_haproxyctl", from = "src" }, 
+            { include = "netcrave_docker_icap", from = "src" }, 
+            { include = "netcrave_docker_ipam", from = "src" }, 
+            { include = "netcrave_docker_davfs", from = "src" }, 
+            { include = "netcrave_docker_acme", from = "src" }, 
+            { include = "netcrave_docker_util", from = "src" }, 
+            { include = "netcrave_docker_dockerd", from = "src" }]
+include = [{ path = "netcrave_compose", format = ["sdist", "wheel"] }]
 [tool.poetry.dependencies]
 python = "^3.11"
 pyroute2 = "^0.7.9"
@@ -30,6 +38,11 @@ fusepy = "^3.0.1"
 pyzmq = "^25.1.2"
 chacha20poly1305 = "^0.0.3"
 webdavclient3 = "^3.14.6"
+scapy = "^2.5.0"
+systemd-service = "^1.8"
+wheel = "^0.42.0"
+prompt-toolkit = "^3.0.43"
+docker-compose = "^1.29.2"
 
 [build-system]
 requires = ["poetry-core"]
@@ -44,3 +57,6 @@ ifconfigd = "netcrave_docker_ifconfig:main"
 ipamd = "netcrave_docker_ipam:main"
 davfsd = "netcrave_docker_davfs:main"
 acmed = "netcrave_docker_acme:main"
+netcrave-dockerd-environment = "netcrave_docker_dockerd:setup_environment"
+netcrave-dockerd-daemon = "netcrave_docker_dockerd:daemon"
+netcrave-dockerd-install = "netcrave_docker_dockerd:install"
