--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,8 @@ wheel = "^0.42.0"
 prompt-toolkit = "^3.0.43"
 docker-compose = "^1.29.2"
 pyyaml = "5.3.1"
+fs = "^2.4.16"
+colorlog = "^6.8.0"
 
 [build-system]
 requires = ["poetry-core"]
