--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ docker-compose = "^1.29.2"
 pyyaml = "5.3.1"
 fs = "^2.4.16"
 colorlog = "^6.8.0"
+aiofiles = "^23.2.1"
 
 [build-system]
 requires = ["poetry-core"]
