add http server, fixed a few things

--- a/netcrave_compose/docker/haproxy/Dockerfile
+++ b/netcrave_compose/docker/haproxy/Dockerfile
@@ -16,4 +16,4 @@ RUN mkdir /ctl_socket
 
 ARG ADMIN_SOCKET_ADDR
 
-CMD haproxy -W -S /ctl_socket/sock -f /etc/haproxy/haproxy.cfg
+CMD haproxy -W -S /run/sock.haproxy -f /etc/haproxy/haproxy.cfg
