--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,26 +18,19 @@ include = [{ path = "netcrave_compose", format = ["sdist", "wheel"] }]
 [tool.poetry.dependencies]
 python = "^3.11"
 pyroute2 = "^0.7.9"
-pyicap = "^1.0b1"
-flask = "^3.0.0"
 haproxyadmin = "^0.2.4"
 certbot = "^2.7.4"
-dnserver = "^0.4.0"
-uwsgi = "^2.0.23"
 ipython = "^8.18.1"
 ipaddress = "^1.0.23"
 cryptography = "^41.0.7"
 pyopenssl = "^23.3.0"
 docker = "^6.1.3"
 psycopg = "^3.1.14"
-pywebdav3 = "^0.10.0"
 python-magic = "^0.4.27"
 unshare = "^0.22"
 landlock = "^1.0.0.dev4"
 fusepy = "^3.0.1"
-pyzmq = "^25.1.2"
 chacha20poly1305 = "^0.0.3"
-webdavclient3 = "^3.14.6"
 scapy = "^2.5.0"
 systemd-service = "^1.8"
 wheel = "^0.42.0"
@@ -47,6 +40,11 @@ pyyaml = "5.3.1"
 fs = "^2.4.16"
 colorlog = "^6.8.0"
 aiofiles = "^23.2.1"
+powerdns-client = "^1.0.4"
+aiohttp = "^3.9.1"
+cgroupspy = "^0.2.2"
+aiohttp-wsgi = "^0.10.0"
+flask = "^3.0.0"
 
 [build-system]
 requires = ["poetry-core"]
@@ -61,6 +59,6 @@ ifconfigd = "netcrave_docker_ifconfig:main"
 ipamd = "netcrave_docker_ipam:main"
 davfsd = "netcrave_docker_davfs:main"
 acmed = "netcrave_docker_acme:main"
-netcrave-dockerd-environment = "netcrave_docker_dockerd:setup_environment"
-netcrave-dockerd-daemon = "netcrave_docker_dockerd:daemon"
-netcrave-dockerd-install = "netcrave_docker_dockerd:install"
+netcrave-docker-environment = "netcrave_docker_dockerd:setup_environment"
+netcrave-docker-daemon = "netcrave_docker_dockerd:daemon"
+netcrave-docker-install = "netcrave_docker_dockerd:install"
