--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,7 +58,7 @@ icapd = "netcrave_docker_icap:main"
 ifconfigd = "netcrave_docker_ifconfig:main"
 ipamd = "netcrave_docker_ipam:main"
 davfsd = "netcrave_docker_davfs:main"
-acmed = "netcrave_docker_acme:main"
+acmed = "netcrave_docker_acme:daemon"
 netcrave-docker-environment = "netcrave_docker_dockerd:setup_environment"
 netcrave-docker-daemon = "netcrave_docker_dockerd:daemon"
 netcrave-docker-install = "netcrave_docker_dockerd:install"
