--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,5 +75,22 @@ disable = [
     "logging-format-interpolation",
     "invalid-name",
     "redundant-u-string-prefix",
-    "ungrouped-imports"
+    "ungrouped-imports",
+    "duplicate-code"
 ]
+
+[tool.autopep8]
+max_line_length = 79
+recursive = true
+aggressive = 3
+experimental = true
+
+[tool.autoflake]
+check = false
+recursive = true
+expand-star-imports = true
+remove-all-unused-imports = true
+ignore-init-module-imports = true
+remove-duplicate-keys = true
+remove-unused-variables = true
+verbose = 0
