--- a/pyproject.toml
+++ b/pyproject.toml
@@ -90,7 +90,6 @@ check = false
 recursive = true
 expand-star-imports = true
 remove-all-unused-imports = true
-ignore-init-module-imports = true
+ignore-init-module-imports = false
 remove-duplicate-keys = true
 remove-unused-variables = true
-verbose = 0
