more refactoring, some fixes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,10 +29,8 @@ psycopg = "^3.1.14"
 python-magic = "^0.4.27"
 unshare = "^0.22"
 landlock = "^1.0.0.dev4"
-fusepy = "^3.0.1"
 chacha20poly1305 = "^0.0.3"
 scapy = "^2.5.0"
-systemd-service = "^1.8"
 wheel = "^0.42.0"
 prompt-toolkit = "^3.0.43"
 docker-compose = "^1.29.2"
@@ -44,7 +42,7 @@ powerdns-client = "^1.0.4"
 aiohttp = "^3.9.1"
 cgroupspy = "^0.2.2"
 aiohttp-wsgi = "^0.10.0"
-flask = "^3.0.0"
+pyfuse3 = "^3.3.0"
 
 [build-system]
 requires = ["poetry-core"]
