--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,8 @@ aiohttp = "^3.9.1"
 cgroupspy = "^0.2.2"
 aiohttp-wsgi = "^0.10.0"
 pyfuse3 = "^3.3.0"
+singleton-decorator = "^1.0.0"
+jinja2 = "^3.1.2"
 
 [build-system]
 requires = ["poetry-core"]
@@ -75,6 +77,11 @@ disable = [
     "redundant-u-string-prefix",
     "ungrouped-imports",
     "duplicate-code"
+]
+ignored-modules = [
+    "pyroute2",
+    "netcrave_compose",
+    "subprocess"
 ]
 
 [tool.autopep8]
