--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,20 +64,7 @@ netcrave-docker-daemon = "netcrave_docker_dockerd:daemon"
 netcrave-docker-install = "netcrave_docker_dockerd:install"
 
 [tool.pylint.messages_control]
-disable = [
-    "missing-function-docstring",
-    "too-many-function-args",
-    "line-too-long",
-    "missing-class-docstring",
-    "too-many-instance-attributes",
-    "consider-using-f-string",
-    "missing-module-docstring",
-    "logging-format-interpolation",
-    "invalid-name",
-    "redundant-u-string-prefix",
-    "ungrouped-imports",
-    "duplicate-code"
-]
+errors-only = true
 ignored-modules = [
     "pyroute2",
     "netcrave_compose",
