--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -17,7 +17,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint
+        pip install pylint poetry
     - name: Analysing the code with pylint
       run: |
-        pylint $(git ls-files '*.py')
+        poetry install --all-extras
+        poetry run pylint $(git ls-files '*.py')
