--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -17,9 +17,10 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint poetry
+        pip install poetry
     - name: Analysing the code with pylint
       run: |
-        sudo apt -y install libfuse3-dev build-essential python3-dev
+        sudo apt -y install libfuse3-dev build-essential python3-dev        
+        poetry build
         poetry install --all-extras
         poetry run pylint $(git ls-files '*.py')
