--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,18 +46,23 @@ pyfuse3 = "^3.3.0"
 singleton-decorator = "^1.0.0"
 jinja2 = "^3.1.2"
 
+[tool.poetry.group.dev.dependencies]
+pylint = "^3.0.3"
+autoflake = "^2.2.1"
+autopep8 = "^2.0.4"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-dnsd = "netcrave_docker_dnsd:main"
-crtmgrd = "netcrave_docker_certificatemgr:main"
-haproxyctld = "netcrave_docker_haproxyctl:main"
-icapd = "netcrave_docker_icap:main"
-ifconfigd = "netcrave_docker_ifconfig:main"
-ipamd = "netcrave_docker_ipam:main"
-davfsd = "netcrave_docker_davfs:main"
+dnsd = "netcrave_docker_dnsd:daemon"
+crtmgrd = "netcrave_docker_certificatemgr:daemon"
+haproxyctld = "netcrave_docker_haproxyctl:daemon"
+icapd = "netcrave_docker_icap:daemon"
+ifconfigd = "netcrave_docker_ifconfig:daemon"
+ipamd = "netcrave_docker_ipam:daemon"
+davfsd = "netcrave_docker_davfs:daemon"
 acmed = "netcrave_docker_acme:daemon"
 netcrave-docker-environment = "netcrave_docker_dockerd:setup_environment"
 netcrave-docker-daemon = "netcrave_docker_dockerd:daemon"
