--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,11 +45,16 @@ aiohttp-wsgi = "^0.10.0"
 pyfuse3 = "^3.3.0"
 singleton-decorator = "^1.0.0"
 jinja2 = "^3.1.2"
+netns = "^1.0"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^3.0.3"
 autoflake = "^2.2.1"
 autopep8 = "^2.0.4"
+jedi = ">=0.13.0"
+json-rpc = ">=1.8.1"
+service-factory = ">=0.1.5"
+python-lsp-server = "^1.9.0"
 
 [build-system]
 requires = ["poetry-core"]
