--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ pyfuse3 = "^3.3.0"
 singleton-decorator = "^1.0.0"
 jinja2 = "^3.1.2"
 netns = "^1.0"
+nftables = {git = "https://salsa.debian.org/pkg-netfilter-team/pkg-nftables.git", rev = "debian/bookworm", subdirectory = "py"}
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^3.0.3"
